--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   node:
     build: .
-    container_name: nodejs_app
+    container_name: nodejs_app_raphael
     depends_on:
       - db
     ports:
