--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,55 +1,56 @@
-name: deploy-docker-hub-and-pull
-on: [push]
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: login to docker
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-        
-      - name: build and push image
+
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/nodejs_postgres:latest
+            ${{ secrets.DOCKER_USERNAME }}/nodejs_postgres:${{ github.sha }}
 
-      - name: deploy to server
+      - name: Copy files to Server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "docker-compose.prod.yml,init-db.sql"
+          target: "~/app"
+
+          # deployment
+      - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Créer un réseau interne Docker pour que Node et Postgres communiquent
-            docker network create node_postgres_net || true
+            cd ~/app
 
-            docker stop postgres_db_node || true
-            docker rm postgres_db_node || true
-            docker run -d \
-              --name postgres_db_node \
-              --network node_postgres_net \
-              -p 3173:5432 \
-              -e POSTGRES_USER=postgres \
-              -e POSTGRES_PASSWORD=mysecretpassword \
-              -e POSTGRES_DB=mydb \
-              -v db_data:/var/lib/postgresql/data \
-              -v ~/app/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql \
-              postgres:13
+            export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
 
-            docker stop nodejs_app_raphael || true
-            docker rm nodejs_app_raphael || true
-            docker run -d \
-              --name nodejs_app_raphael \
-              --network node_postgres_net \
-              -p 3174:3000 \
-              -e DATABASE_URL=postgres://postgres:mysecretpassword@postgres_db_node:3173/mydb \
-              -e NODE_ENV=development \
-              -e CHOKIDAR_USEPOLLING=true \
-              ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs_postgres:latest
+
+            docker compose -f docker-compose.prod.yml down
+            docker compose -f docker-compose.prod.yml up -d
+
